--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -2,4 +2,22 @@
 
 {% block 'container' %}
 
+<div class="row">
+	<div class="col-lg-6">
+		<form role="form">
+			<div class="form-group">
+				<label>Select the especie</label>
+				<select class="form-control">
+	                <option>Vigna</option>
+	                <option>Others</option>
+	            </select>
+			</div>
+			<div class="form-group">
+				<label>Input your data set here</label>
+				<textarea class="form-control" rows="3"></textarea>
+			</div>
+		</form>
+	</div>
+</div>
+
 {% endblock %}
