--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -2,22 +2,46 @@
 
 {% block 'container' %}
 
+{% load widget_tweaks %}
+
 <div class="row">
 	<div class="col-lg-6">
 		<form role="form">
-			<div class="form-group">
-				<label>Select the especie</label>
-				<select class="form-control">
-	                <option>Vigna</option>
-	                <option>Others</option>
-	            </select>
-			</div>
-			<div class="form-group">
-				<label>Input your data set here</label>
-				<textarea class="form-control" rows="3"></textarea>
-			</div>
+			<fieldset>
+				{% csrf_token %}
+				<div class="form-group">
+					<label>Select the especie</label>
+					<select class="form-control">
+		                <option>Vigna</option>
+		                <option>Others</option>
+		            </select>
+				</div>
+				{% for field in form %}
+					<div class="form-group {% if field.errors %} has-errors {% endif %}">
+				      <label for="{{field.auto_id }}" class="col-md-3 control-label">{{ field.label }}</label>
+				      <div class="col-md-9">
+				        {% render_field field class='form-control' %}
+				      	{% for error in field.errors %}
+				      		<span class="help-block">{{error}}</span>
+				      	{% endfor %}
+				      </div>
+				    </div>
+				{% endfor %}
+				<div class="form-group">
+			      <div class="col-md-9 col-md-offset-3">
+			      	<br/>
+			        <button type="submit" class="btn btn-primary">Run!</button>
+			      </div>
+			    </div>
+			</fieldset>
 		</form>
 	</div>
+
+	{%if success %}
+		{% for gene in genes %}
+			{{gene}}
+		{% endfor %}
+	{% endif %}
 </div>
 
 {% endblock %}
