Refatorando modelagem relacional

--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -30,7 +30,7 @@
 				<div class="form-group">
 			      <div class="col-md-9 col-md-offset-3">
 			      	<br/>
-			        <button type="submit" class="btn btn-primary">Run!</button>
+			        <button type="submit" class="btn btn-primary">Run</button>
 			      </div>
 			    </div>
 			</fieldset>
