--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -83,7 +83,7 @@
         <div id="page-wrapper">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1 class="page-header">Analyse</h1>
+                    <h1 class="page-header">Analyze</h1>
                 </div>
                 <!-- /.col-lg-12 -->
             </div>
