--- a/ecr/templates/ecr/index.html
+++ b/ecr/templates/ecr/index.html
@@ -2,6 +2,7 @@
 
 {% block 'container' %}
 
+{% load static %}
 {% load widget_tweaks %}
 
 <div class="row">
@@ -38,9 +39,59 @@
         </form>
     </div>
     {% else %}
-    <div class="col-lg-12">
-        {% load django_tables2 %}
-        {% render_table table %}
+    <div class="row">
+        <div class="col-lg-12">
+            <img class="img-responsive" src="{% static 'img/example.png' %}"\>
+            <br/>
+            <br/>
+            <br/>
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    General Cis-Element list's with data analysis:
+                </div>
+                <!-- /.panel-heading -->
+                <div class="panel-body">
+                    {{ dataframe | safe }}
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    PhytoProm Log result:
+                </div>
+                <!-- /.panel-heading -->
+                <div class="panel-body">
+                    <table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-example">
+                        <thead>
+                            <tr>
+                                <th>Promoter</th>
+                                <th>Cis-Element</th>
+                                <th>Upstream</th>
+                                <th>Downstream</th>
+                                <th>Mean</th>
+                                <th>Sumatory</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {% for row in table %}
+                                <tr class="">
+                                    <td>{{ row.promoter_id }}</td>
+                                    <td>{{ row.tf }}</td>
+                                    <td>{{ row.upstream }}</td>
+                                    <td>{{ row.downstream }}</td>
+                                    <td class="center">{{ row.mean }}</td>
+                                    <td class="center">{{ row.sumatory }}</td>
+                                </tr>
+                            {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
     {% endif %}
 </div>
 
