--- a/ecr/templates/ecr/index.html
+++ b/ecr/templates/ecr/index.html
@@ -45,13 +45,21 @@
             <br/>
             <br/>
             <br/>
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    General Cis-Element list's with data analysis:
-                </div>
-                <!-- /.panel-heading -->
-                <div class="panel-body">
-                    {{ dataframe | safe }}
+            <a class="btn btn-primary" data-toggle="collapse" href="#collapseCis" role="button" aria-expanded="false" aria-controls="collapseCis">
+                General Cis-Element list's
+            </a>
+            <a class="btn btn-primary" data-toggle="collapse" href="#collapseLog" role="button" aria-expanded="false" aria-controls="collapseLog">
+                PhytoProm Log result
+            </a>
+            <div class="collapse" id="collapseCis">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        General Cis-Element list's with data analysis:
+                    </div>
+                    <!-- /.panel-heading -->
+                    <div class="panel-body">
+                        {{ dataframe | safe }}
+                    </div>
                 </div>
             </div>
         </div>
@@ -59,35 +67,37 @@
     <div class="row">
         <div class="col-lg-12">
             <div class="panel panel-default">
-                <div class="panel-heading">
-                    PhytoProm Log result:
-                </div>
-                <!-- /.panel-heading -->
-                <div class="panel-body">
-                    <table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-example">
-                        <thead>
-                            <tr>
-                                <th>Promoter</th>
-                                <th>Cis-Element</th>
-                                <th>Upstream</th>
-                                <th>Downstream</th>
-                                <th>Mean</th>
-                                <th>Sumatory</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            {% for row in table %}
-                                <tr class="">
-                                    <td>{{ row.promoter_id }}</td>
-                                    <td>{{ row.tf }}</td>
-                                    <td>{{ row.upstream }}</td>
-                                    <td>{{ row.downstream }}</td>
-                                    <td class="center">{{ row.mean }}</td>
-                                    <td class="center">{{ row.sumatory }}</td>
+                <div class="collapse" id="collapseLog">
+                    <div class="panel-heading">
+                        PhytoProm Log result:
+                    </div>
+                    <!-- /.panel-heading -->
+                    <div class="panel-body">
+                        <table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-example">
+                            <thead>
+                                <tr>
+                                    <th>Promoter</th>
+                                    <th>Cis-Element</th>
+                                    <th>Upstream</th>
+                                    <th>Downstream</th>
+                                    <th>Mean</th>
+                                    <th>Sumatory</th>
                                 </tr>
-                            {% endfor %}
-                        </tbody>
-                    </table>
+                            </thead>
+                            <tbody>
+                                {% for row in table %}
+                                    <tr class="">
+                                        <td>{{ row.promoter_id }}</td>
+                                        <td>{{ row.tf }}</td>
+                                        <td>{{ row.upstream }}</td>
+                                        <td>{{ row.downstream }}</td>
+                                        <td class="center">{{ row.mean }}</td>
+                                        <td class="center">{{ row.sumatory }}</td>
+                                    </tr>
+                                {% endfor %}
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
             </div>
         </div>
