--- a/ecr/templates/ecr/index.html
+++ b/ecr/templates/ecr/index.html
@@ -51,6 +51,13 @@
             <a class="btn btn-primary" data-toggle="collapse" href="#collapseLog" role="button" aria-expanded="false" aria-controls="collapseLog">
                 PhytoProm Log result
             </a>
+            <a class="btn btn-primary" data-toggle="collapse" href="#collapseEnriched" role="button" aria-expanded="false" aria-controls="collapseLog">
+                Enriched Cis-Elements
+            </a>
+            <br/>
+            <br/>
+            <br/>
+            <br/>
             <div class="collapse" id="collapseCis">
                 <div class="panel panel-default">
                     <div class="panel-heading">
@@ -58,7 +65,48 @@
                     </div>
                     <!-- /.panel-heading -->
                     <div class="panel-body">
-                        {{ dataframe | safe }}
+                        <!-- {{ dataframe | safe }} -->
+
+                        <table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-example">
+                            <thead>
+                                <tr>
+                                    <th>Family</th>
+                                    <th>ID</th>
+                                    <th>Motifs</th>
+                                    <th>Name</th>
+                                    <th>Reverse Complement</th>
+                                    <th>Vigna Genome</th>
+                                    <th>Cluster</th>
+                                    <th>p-value</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                {% for list in dataframe %}
+                                    <tr class="">
+                                        {% for row in list%}
+                                            <td>
+                                                {% if forloop.counter == 4 %}
+                                                    <a href="https://www.ncbi.nlm.nih.gov/pubmed/?term=PLANT+STRESS+AND+{{row}}" target="_blank">
+                                                {% endif %}
+                                                {{ row }}
+                                                </a>
+                                            </td>
+                                        {% endfor%}
+                                    </tr>
+                                {% endfor %}
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+            <div class="collapse" id="collapseEnriched">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        Enriched Cis-Elements list's with data analysis:
+                    </div>
+                    <!-- /.panel-heading -->
+                    <div class="panel-body">
+                        {{ enrichment | safe }}
                     </div>
                 </div>
             </div>
@@ -85,9 +133,9 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                {% for row in table %}
+                                {% for row in log %}
                                     <tr class="">
-                                        <td>{{ row.promoter_id }}</td>
+                                        <td>{{ row.promoter_id }}</a></td>
                                         <td>{{ row.tf }}</td>
                                         <td>{{ row.upstream }}</td>
                                         <td>{{ row.downstream }}</td>
