--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -105,13 +105,13 @@
     <!-- Bootstrap Core JavaScript -->
     <script src="{% static 'vendor/bootstrap/js/bootstrap.min.js' %}"></script>
 
+    <!-- External JS libraries -->
+    <script src="{% static 'js/d3.min.js' %}"></script>
+    <!-- Custom JS -->
+    
+    
     <!-- Metis Menu Plugin JavaScript -->
     <script src="{% static 'vendor/metisMenu/metisMenu.min.js' %}"></script>
-
-    <!-- Morris Charts JavaScript -->
-    <script src="{% static 'vendor/raphael/raphael.min.js' %}"></script>
-    <script src="{% static 'vendor/morrisjs/morris.min.js' %}"></script>
-    <script src="{% static 'data/morris-data.js' %}"></script>
 
     <!-- Custom Theme JavaScript -->
     <script src="{% static 'dist/js/sb-admin-2.js' %}"></script>
