--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -71,7 +71,10 @@
                             <a href=""><i class="fa fa-book fa-fw"></i> Documentation</a>
                         </li>
                         <li>
-                            <a href=""><i class="fa fa-bar-chart-o fa-fw"></i> Analysis Exploratory</a>
+                            <a href="{% url 'promoter' %}"><i class="fa fa-align-left fa-fw"></i> Promoter Mining</a>
+                        </li>
+                        <li>
+                            <a href="{% url 'index' %}"><i class="fa fa-bar-chart-o fa-fw"></i> Analysis Exploratory</a>
                         </li>
                     </ul>
                 </div>
@@ -83,7 +86,7 @@
         <div id="page-wrapper">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1 class="page-header">Analyze</h1>
+                    <h1 class="page-header">{{title}}</h1>
                 </div>
                 <!-- /.col-lg-12 -->
             </div>
