--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -68,10 +68,16 @@
                             <!-- /input-group -->
                         </li>
                         <li>
-                            <a href=""><i class="fa fa-book fa-fw"></i> Documentation</a>
+                            <a href="#"><i class="fa fa-book fa-fw"></i> Documentation</a>
                         </li>
                         <li>
                             <a href="{% url 'promoter' %}"><i class="fa fa-align-left fa-fw"></i> Promoter Mining</a>
+                        </li>
+                        <li>
+                            <a href="#"><i class="fa fa-sort-amount-desc fa-fw"></i> Protein Mining</a>
+                        </li>
+                        <li>
+                            <a href="#"><i class="fa fa-th fa-fw"></i> Transcript Mining</a>
                         </li>
                         <li>
                             <a href="{% url 'index' %}"><i class="fa fa-bar-chart-o fa-fw"></i> Analysis Exploratory</a>
