Adding mining for protein and transcript

--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -74,10 +74,10 @@
                             <a href="{% url 'promoter' %}"><i class="fa fa-align-left fa-fw"></i> Promoter Mining</a>
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-sort-amount-desc fa-fw"></i> Protein Mining</a>
+                            <a href="{% url 'protein' %}"><i class="fa fa-sort-amount-desc fa-fw"></i> Protein Mining</a>
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-th fa-fw"></i> Transcript Mining</a>
+                            <a href="{% url 'transcript' %}"><i class="fa fa-th fa-fw"></i> Transcript Mining</a>
                         </li>
                         <li>
                             <a href="{% url 'index' %}"><i class="fa fa-bar-chart-o fa-fw"></i> Analysis Exploratory</a>
