--- a/ecr/templates/ecr/index.html
+++ b/ecr/templates/ecr/index.html
@@ -1,11 +1,10 @@
-{% extends 'index.html' %}
+{% extends 'base.html' %}
 
-{% block 'container' %}
+{% block index %}
 
 {% load static %}
 {% load widget_tweaks %}
     <div class="home">
-        <img class="img-responsive" src="{% static 'img/example.png' %}">
         <p><span class="tab">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod 
         tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero 
         eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea 
@@ -21,5 +20,42 @@
         dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores 
         et ea rebum. Stet clita kasd gubergren, no sea takimata 
         sanctus est.</p>
+    </div>
+{% endblock %}
+
+{% block container %}
+    <div class="page-content">
+        <div class="container">
+            <div class="docs-overview">
+                <div class="row justify-content-center">
+                    <div class="col-12 col-lg-6 py-3">
+                        <div class="card shadow-sm">
+                            <div class="card-body">
+                                <h5 class="card-title mb-3">
+                                    <span class="card-title-text">Graphic output</span>
+                                </h5>
+                                <div class="card-text">
+                                    Section overview goes here. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.
+                                </div>
+                                <a class="card-link-mask" href="docs-page.html#section-1"></a>
+                            </div><!--//card-body-->
+                        </div><!--//card-->
+                    </div><!--//col-->
+                    <div class="col-12 col-lg-6 py-3">
+                        <div class="card shadow-sm">
+                            <div class="card-body">
+                                <h5 class="card-title mb-3">
+                                    <span class="card-title-text">Tabular output</span>
+                                </h5>
+                                <div class="card-text">
+                                    Section overview goes here. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo.
+                                </div>
+                                <a class="card-link-mask" href="docs-page.html#section-2"></a>
+                            </div><!--//card-body-->
+                        </div><!--//card-->
+                    </div><!--//col-->
+                </div>
+            </div>
+        </div>
     </div>
 {% endblock %}
