--- a/ecr/templates/ecr/promoter.html
+++ b/ecr/templates/ecr/promoter.html
@@ -1,11 +1,11 @@
 {% extends 'base.html' %}
 
-{% block 'container' %}
+{% block container %}
 
 {% load static %}
 {% load widget_tweaks %}
 
-<div class="row">
+<div class="row py-5">
     {% if not success %}
     <div class="middle"></div>
     <div class="col-lg-3"></div>
