--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -1,185 +1,139 @@
 <!DOCTYPE html>
 {% load static %}
-<html lang="en">
-
+<html lang="en"> 
 <head>
-
+    <title>PhytoProm</title>
+    
+    <!-- Meta -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Bootstrap Documentation Template For Software Developers">
+    <meta name="author" content="Xiaoying Riley at 3rd Wave Media">    
+    <link rel="shortcut icon" href="favicon.ico"> 
+    
+    <!-- Google Font -->
+    <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700&display=swap" rel="stylesheet">
+    
+    <!-- FontAwesome JS-->
+    <script defer src="{% static 'assets/fontawesome/js/all.min.js' %}"></script>
 
-    <title>PhytoProm</title>
+    <!-- Theme CSS -->  
+    <link id="theme-style" rel="stylesheet" href="{% static 'assets/css/theme.css' %}">
 
-    <!-- Bootstrap Core CSS -->
-    <link href="{% static 'vendor/bootstrap/css/bootstrap.css' %}" rel="stylesheet">
-
-    <!-- MetisMenu CSS -->
-    <link href="{% static 'vendor/metisMenu/metisMenu.min.css' %}" rel="stylesheet">
-
-    <!-- Custom CSS -->
-    <link href="{% static 'dist/css/sb-admin-2.css' %}" rel="stylesheet">
-
-    <!-- Morris Charts CSS -->
-    <link href="{% static 'vendor/morrisjs/morris.css' %}" rel="stylesheet">
-
-    <!-- Custom Fonts -->
-    <link href="{% static 'vendor/font-awesome/css/font-awesome.min.css' %}" rel="stylesheet" type="text/css">
-    <script defer src="{% static 'fontawesome/js/all.min.js' %}"></script>
-    <link href="{% static 'vendor/theme.css' %}" rel="stylesheet">
     <link href="{% static 'vendor/custom.css' %}" rel="stylesheet">
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
 
-</head>
+</head> 
 
-<body>
+<body>    
     <header class="header fixed-top">       
         <div class="branding docs-branding">
             <div class="container-fluid position-relative py-2">
                 <div class="docs-logo-wrapper">
-                    <div class="site-logo"><a class="navbar-brand" href="index.html"><img class="logo-icon mr-2" src="{% static 'img/coderdocs-logo.svg' %}" alt="logo"><span class="logo-text">Coder<span class="text-alt">Docs</span></span></a></div>    
+                    <div class="site-logo">
+                        <a class="navbar-brand" href="{% url 'index' %}">
+                            <!--<img class="logo-icon mr-2" src="{% static 'assets/images/coderdocs-logo.svg' %}" alt="logo">-->
+                            <span class="logo-text">PhytoProm</span>
+                        </a>
+                    </div>    
                 </div><!--//docs-logo-wrapper-->
                 <div class="docs-top-utilities d-flex justify-content-end align-items-center">
     
-                    <ul class="social-list list-inline mx-md-3 mx-lg-5 mb-0 d-none d-lg-flex">
-                        <li class="list-inline-item"><a href="#"><i class="fab fa-github fa-fw"></i></a></li>
-                        <li class="list-inline-item"><a href="#"><i class="fab fa-twitter fa-fw"></i></a></li>
-                        <li class="list-inline-item"><a href="#"><i class="fab fa-slack fa-fw"></i></a></li>
-                        <li class="list-inline-item"><a href="#"><i class="fab fa-product-hunt fa-fw"></i></a></li>
+                    <ul class="list-inline">
+                        <li class="list-inline-item">
+                            <a class="btn btn-primary d-none d-lg-flex" href="{% url 'analyze' %}">
+                                Exploratory Analysis
+                            </a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a class="btn btn-primary d-none d-lg-flex" href="{% url 'promoter' %}">
+                                Promoter Download
+                            </a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a class="btn btn-primary d-none d-lg-flex" href="{% url 'transcript' %}">
+                                Transcript Download
+                            </a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a class="btn btn-primary d-none d-lg-flex" href="{% url 'protein' %}">
+                                Protein Download
+                            </a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a class="btn btn-primary d-none d-lg-flex" href="#">
+                                Documentation
+                            </a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a class="btn btn-primary d-none d-lg-flex" href="#">
+                                Suggestions
+                            </a>
+                        </li>
                     </ul><!--//social-list-->
-                    <a href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/coderdocs-free-bootstrap-4-documentation-template-for-software-projects/" class="btn btn-primary d-none d-lg-flex">Download</a>
                 </div><!--//docs-top-utilities-->
             </div><!--//container-->
         </div><!--//branding-->
     </header><!--//header-->
-    <div class="container">
-      <div class="pull-left logo hidden-sm hidden-md hidden-xs">
-        <a href="{% url 'index' %}"><img class="img-responsive" src="{% static 'img/logo.png' %}" style="height:100px; margin-bottom:10px;"></a>
-      </div>
-    </div>
-    <div class="container">
-      <div class="navbar navbar-default">
+
+    <section class="cta-section text-center py-5 theme-bg-dark position-relative">
+        <div class="theme-bg-shapes-right"></div>
+        <div class="theme-bg-shapes-left"></div>
         <div class="container">
-            <div class="pull-left hidden-lg">
-              <a href="{% url 'index' %}"><img class="img-responsive" style="max-width:100px;" src="{% static 'img/logo.png' %}" style="height:100px; margin-bottom:10px;"></a>
-            </div>
-        <div class="navbar-header">
-          <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
+            {% block index %}{% endblock %}
         </div>
-        <div class="navbar-collapse collapse" id="navbar-main">
-            <ul class="nav navbar-nav">
-                <li class="top-menu">
-                    <a href="{% url 'analyze' %}">
-                        <span> Exploratory Analysis</span>
-                    </a>
-                </li>
-                <li class="top-menu">
-                    <a href="{% url 'promoter' %}">
-                        <span> Promoter Download</span>
-                    </a>
-                </li>
-                <li class="top-menu">
-                    <a href="{% url 'transcript' %}">
-                        <span> Transcript Download</span>
-                    </a>
-                </li>
-                <li class="top-menu">
-                    <a href="{% url 'protein' %}">
-                        <span> Protein Download</span>
-                    </a>
-                </li>
-                <li class="top-menu">
-                    <a href="#">
-                        <span> Documentation</span>
-                    </a>
-                </li>
-                <li class="top-menu">
-                    <a href="#">
-                        <span> Suggestions</span>
-                    </a>
-                </li>
-            </ul>
-        </div>
-      </div>
-      </div>
-    </div>
-    <div class="container">
-      {% block 'container' %}
-      {% endblock %}
-    </div>
+    </section><!--//cta-section-->
+    <section class="cta-section position-relative">
+        {% block container %}{% endblock %}
+    </section>  
+    
+    <footer class="footer">
 
-    </div>
-    <!-- /#wrapper -->
-    {% block footer %}
-      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 footer">
-        <div class="row">
+        <div class="footer-bottom text-center py-5">
+            
             <hr>
-            <h3 class="copyright">Powered by:</h3>
-            <div class="col-lg-2 col-md-2 col-sm-12 col-xs-12"></div>
-            <div class="col-lg-2 col-md-2 col-sm-12 col-xs-12">
-                <div class="footer">
-                    <a href="https://www.ufpe.br/"><img class="img-responsive" src="{% static 'img/ufpe.png' %}"></a>
-                </div>
-            </div>
-            <div class="col-lg-2 col-md-2 col-sm-12 col-xs-12">
-                <div class="footer">
-                    <a href="https://www.ufpe.br/"><img class="img-responsive" src="{% static 'img/ufpe.png' %}"></a>
-                </div>
-            </div>
-            <div class="col-lg-2 col-md-2 col-sm-12 col-xs-12">
-                <div class="footer">
-                    <a href="https://www.ufpe.br/"><img class="img-responsive" src="{% static 'img/ufpe.png' %}"></a>
-                </div>
-            </div>
-            <div class="col-lg-2 col-md-2 col-sm-12 col-xs-12">
-                <div class="footer">
-                    <a href="https://www.ufpe.br/"><img class="img-responsive" src="{% static 'img/ufpe.png' %}"></a>
-                </div>
-            </div>
-            <div class="col-lg-2 col-md-2 col-sm-12 col-xs-12"></div> 
-        </div>
-        <br/>
-        <br/>
-        <br/>
-        <div class="row">
-            <ul class="nav flex-column footer-list">
-                <li class="nav-item"><a href="">Filipe Cordeiro de Medeiros Azevêdo - Computer Scientist</a></li>
-                <li class="nav-item"><a href="">José Ribamar Neto - PhD associated</a></li>
-                <li class="nav-item"><a href="">Ana Benko - Project Coordinator</a></li>
+            <small class="copyright">Powered by:</small>
+            <ul class="list-inline">
+                <li class="list-inline-item">
+                    <a href="https://www.ufpe.br/">
+                        <img class="img-responsive footer" src="{% static 'img/ufpe.png' %}">
+                    </a>
+                </li>
+                <li class="list-inline-item">
+                    <a href="https://www.ufpe.br/">
+                        <img class="img-responsive footer" src="{% static 'img/ufpe.png' %}">
+                    </a>
+                </li>
+                <li class="list-inline-item">
+                    <a href="https://www.ufpe.br/">
+                        <img class="img-responsive footer" src="{% static 'img/ufpe.png' %}">
+                    </a>
+                </li>
+                <li class="list-inline-item">
+                    <a href="https://www.ufpe.br/">
+                        <img class="img-responsive footer" src="{% static 'img/ufpe.png' %}">
+                    </a>
+                </li>
             </ul>
-            <br/>
-            <br/>
-            <br/>
+                <ul class="nav flex-column footer-list">
+                    <li class="nav-item"><a href="">Filipe Cordeiro de Medeiros Azevêdo - Computer Scientist</a></li>
+                    <li class="nav-item"><a href="">José Ribamar Neto - PhD associated</a></li>
+                    <li class="nav-item"><a href="">Ana Benko - Project Coordinator</a></li>
+                </ul>
+                <br/>
+                <br/>
+                <br/>
+            
         </div>
-    </div>
-    {% endblock %}
-    <!-- jQuery -->
-    <script src="{% static 'vendor/jquery/jquery.min.js' %}"></script>
-
-    <!-- Bootstrap Core JavaScript -->
-    <script src="{% static 'vendor/bootstrap/js/bootstrap.min.js' %}"></script>
-
-    <!-- External JS libraries -->
-    <script src="{% static 'js/d3.min.js' %}"></script>
-    <!-- Custom JS -->
-    
-    
-    <!-- Metis Menu Plugin JavaScript -->
-    <script src="{% static 'vendor/metisMenu/metisMenu.min.js' %}"></script>
-
-    <!-- Custom Theme JavaScript -->
-    <script src="{% static 'dist/js/sb-admin-2.js' %}"></script>
+        
+    </footer>
+       
+    <!-- Javascript -->          
+    <script src="{% static 'assets/plugins/jquery-3.4.1.min.js' %}"></script>
+    <script src="{% static 'assets/plugins/popper.min.js' %}"></script>
+    <script src="{% static 'assets/plugins/bootstrap/js/bootstrap.min.js' %}"></script>  
+    <script src="{% static 'js/d3.min.js' %}"></script>  
 
 </body>
+</html> 
 
-</html>
