--- a/ecr/templates/ecr/analyze.html
+++ b/ecr/templates/ecr/analyze.html
@@ -1,10 +1,11 @@
 {% extends 'base.html' %}
 
-{% block 'container' %}
+{% block container %}
 
 {% load static %}
 {% load widget_tweaks %}
 <div class="middle"></div>
+<div class="row">
 <div class="col-lg-3"></div>
     {% if not success %}
         <div class="col-lg-6">
@@ -39,6 +40,7 @@
         </form>
     </div>
     <div class="col-lg-3"></div>
+</div>
     {% else %}
         <div class="col-lg-12">
             <div class="row">
