--- a/ecr/templates/ecr/analyze.html
+++ b/ecr/templates/ecr/analyze.html
@@ -44,26 +44,32 @@
     {% else %}
         <div class="col-lg-12">
             <div class="row">
-                <div id="chart-area"></div>
+                <div class="col-lg-12">
+                    <div id="chart-area"></div>
+                </div>
             </div>
             </div>
             <br/>
             <br/>
             <br/>
-            <a class="btn btn-primary" data-toggle="collapse" href="#collapseEnriched" role="button" aria-expanded="true" aria-controls="collapseLog">
-                Enriched Cis-Elements
-            </a>
-            <a class="btn btn-primary" data-toggle="collapse" href="#collapseCis" role="button" aria-expanded="false" aria-controls="collapseCis">
-                General Cis-Element list's
-            </a>
-            <a class="btn btn-primary" data-toggle="collapse" href="#collapseLog" role="button" aria-expanded="false" aria-controls="collapseLog">
-                PhytoProm Log result
-            </a>
+            <div class="col-lg-3"></div>
+            <div class="col-lg-6">
+                <a class="btn btn-primary" data-toggle="collapse" href="#collapseEnriched" role="button" aria-expanded="true" aria-controls="collapseLog">
+                    Enriched Cis-Elements
+                </a>
+                <a class="btn btn-primary" data-toggle="collapse" href="#collapseCis" role="button" aria-expanded="false" aria-controls="collapseCis">
+                    General Cis-Element list's
+                </a>
+                <a class="btn btn-primary" data-toggle="collapse" href="#collapseLog" role="button" aria-expanded="false" aria-controls="collapseLog">
+                    PhytoProm Log result
+                </a>
+            </div>
+            <div class="col-lg-3"></div>
             <br/>
             <br/>
             <br/>
             <br/>
-            <div class="collapse" id="collapseEnriched">
+            <div class="col-lg-12 collapse" id="collapseEnriched">
                 <div class="panel panel-default">
                     <div class="panel-heading">
                         Enriched Cis-Element list's with data analysis:
@@ -112,7 +118,7 @@
                 </div>
             </div>
 
-            <div class="collapse" id="collapseCis">
+            <div class="col-lg-12 collapse" id="collapseCis">
                 <div class="panel panel-default">
                     <div class="panel-heading">
                         General Cis-Element list's with data analysis:
@@ -165,7 +171,7 @@
     <div class="row">
         <div class="col-lg-12">
             <div class="panel panel-default">
-                <div class="collapse" id="collapseLog">
+                <div class="col-lg-12 collapse" id="collapseLog">
                     <div class="panel-heading">
                         PhytoProm Log result:
                     </div>
@@ -206,9 +212,9 @@
 <script type="text/javascript">
     $.get("{% url 'api' %}", function(data) {
 
-    var margin = {'left': 100, 'right': 120, 'top': 10, 'bottom': 100};
+    var margin = {'left': 100, 'right': 140, 'top': 10, 'bottom': 100};
 
-    var width = 1020 - margin.left - margin.right;
+    var width = 1040 - margin.left - margin.right;
     var height = {{size}}*20 - margin.top - margin.bottom;
 
     var g = d3.select("#chart-area")
@@ -352,8 +358,7 @@
     legend.append("text")
         .attr("x", width + margin.left + 45)
         .attr("y", d=>legendScale(d.tf)+30)
-        .text(d=>d.tf)
-        .attr("font-weight", "bold");
+        .text(d=>d.tf);
     });
 </script>
 
